# machine-tool-health-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TASKS.md  environment.yml  pyproject.toml
.github/workflows/: tests.yaml
data/: README.md
machine_tool_health_analysis/: __main__.py  cli.py  loader.py
tests/: test_loader.py
